--- a/PetApp_Empresa/Views/Shared/_Layout.cshtml
+++ b/PetApp_Empresa/Views/Shared/_Layout.cshtml
@@ -109,6 +109,11 @@
                                 <i class="fas fa-box"></i> Accesorios
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Validaciones" asp-action="ValidacionesPago">
+                                <i class="fas fa-box"></i> ConfirmacionPago
+                            </a>
+                        </li>
                     }
                     <!-- Menú para Clientes -->
                     @if (User.IsInRole("Cliente"))
